--- a/source/sass/base/_grid.scss
+++ b/source/sass/base/_grid.scss
@@ -11,6 +11,7 @@
   padding: 1vw;
 }
 .header {
+  height: 1.5vmax;
   grid-column: 1 / 9;
   grid-row: 1;
 }
