--- a/source/sass/base/_pygments.scss
+++ b/source/sass/base/_pygments.scss
@@ -1,8 +1,8 @@
 .highlight pre {
     font-family: 'Inconsolata', monospace;
     font-size:1.5rem;
-    line-height: 2rem;
-    margin-top: $margin__large;
+    line-height: 2.1rem;
+    margin: $margin__large 0;
     // padding: 32px;
     background: $color__black;
     color: $color__white;
