--- a/source/sass/base/_youtube.scss
+++ b/source/sass/base/_youtube.scss
@@ -21,6 +21,7 @@
 }
 .youtube-4x3,
 .youtube-16x9 {
+    margin: $margin__large 0;
 	position: relative;
 	height: 0;
 	overflow: hidden;
